--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,16 @@
+name: Deploy 
 
+on:
+ release:
+  types: [published]
+
+
+jobs:
+ build:
+ 
+   - name: Deploy to GitHub Pages
+    uses: peaceiris/actions-gh-pages@v4
+    with:
+     github_token: ${{ secrets.GITHUB_TOKEN }}
+     publish_dir: ./_site
+     keep_files: true
