--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,8 @@ jobs:
   steps:
    - name: Checkout code
      uses: actions/checkout@v4
+   - name: Create v1 directory
+     run: mkdir -p _site/v1
    - name: Deploy to GitHub Pages
      uses: peaceiris/actions-gh-pages@v1
      with:
