--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,18 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      
+
+      - name: Install dependencies
+        run: |
+          echo "Installing dependencies..."
+          npm ci
+          echo "Dependencies installed."
+
       - name: Build the application
         run: |
-          npm install
+          echo "Building the application..."
           npm run build
+          echo "Build completed."
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
