--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,13 @@ jobs:
    - name: Create version directory
      run: |
        VERSION-${{ github.ref_name }}
-       SITE_DIR-"./public/v${VERSION}"
-       mkdir -p "$SITE_DIR"
+       VERSION_DIR-"./public/v${VERSION}"
+       mkdir -p "$VERSION_DIR"
 
        files_to_copy=("en" "ru" "index.html")
 
        for file in "${files_to_copy[@]}"; do
-          cp -r "./${file}" "$SITE_DIR/"
+          cp -r "./${file}" "$VERSION_DIR/"
        done
    - name: Deploy to GitHub Pages
      uses: peaceiris/actions-gh-pages@v4
