--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,5 @@ jobs:
      uses: peaceiris/actions-gh-pages@v4
      with:
       github_token: ${{ secrets.GITHUB_TOKEN }}
-      
+      publish_dir: ./VERSION_DIR
+      keep_files: true
